[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 448.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="Enemy" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 6
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2( 0, -68 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HPBar" type="TextureProgress" parent="."]
margin_left = -40.0
margin_top = -60.0
margin_right = 40.0
margin_bottom = -50.0
rect_min_size = Vector2( 80, 10 )
tint_under = Color( 0.211765, 0.211765, 0.211765, 1 )
tint_progress = Color( 0.00784314, 0.509804, 0.0156863, 1 )

[connection signal="body_entered" from="DetectionArea" to="." method="pursue_player"]
[connection signal="body_exited" from="DetectionArea" to="." method="leave_pursue"]
[connection signal="body_entered" from="AttackArea" to="." method="Initiate_Attack"]
[connection signal="timeout" from="AttackTimer" to="." method="Initiate_Attack"]
